--- a/404.html
+++ b/404.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="fr">
   <head>
-    <meta http-equiv="refresh" content="0; url=index.html">
-    <title>Redirection...</title>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=/" />
+    <title>Redirection…</title>
   </head>
   <body>
-    <p>Redirection vers <a href="index.html">le portfolio</a>...</p>
+    <p>Redirection vers la page d'accueil — <a href="/">Retour</a></p>
   </body>
 </html>
 
