--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p class="lead">Actuellement en <strong>Bac+2 à Diginamic</strong>. Candidat Bachelor 3 Cybersécurité — Ynov (rentrée 2026). Je construis des compétences pratiques en pentest, administration système et automatisation.</p>
           <p class="cta">
             <a class="btn" href="assets/CV_Saad_Idrissi.pdf" download>🔽 Télécharger mon CV</a>
-            <a class="btn ghost" href="https://github.com/3xpyth0n/writeups" target="_blank" rel="noopener">Voir mes writeups (hobby)</a>
+            <a class="btn ghost" href="https://github.com/3xpyth0n/writeups" target="_blank" rel="noopener">Voir mes writeups TryHackMe</a>
           </p>
         </div>
         <div class="hero-media">
@@ -85,8 +85,8 @@
       <div class="skill-bars">
         <div class="bar"><span class="label">Linux</span><progress value="85" max="100"></progress></div>
         <div class="bar"><span class="label">Windows / AD</span><progress value="75" max="100"></progress></div>
-        <div class="bar"><span class="label">Pentest Web</span><progress value="70" max="100"></progress></div>
-        <div class="bar"><span class="label">Scripting (Python)</span><progress value="60" max="100"></progress></div>
+        <div class="bar"><span class="label">Pentest Web</span><progress value="80" max="100"></progress></div>
+        <div class="bar"><span class="label">Scripting (Python)</span><progress value="30" max="100"></progress></div>
       </div>
     </section>
 
@@ -114,7 +114,6 @@
           <p><a class="btn ghost" href="#" aria-disabled="true">Détail (bientôt)</a></p>
         </article>
       </div>
-      <p class="muted">Tu peux ajouter des fiches projet détaillées dans `projects/` plus tard ; je peux te générer le template.</p>
     </section>
 
     <section id="contact" class="wrap card">
@@ -125,12 +124,11 @@
         <li><strong>GitHub :</strong> <a href="https://github.com/3xpyth0n" target="_blank" rel="noopener">3xpyth0n</a></li>
         <li><strong>Localisation :</strong> Montpellier, 34</li>
       </ul>
-      <p class="muted">Pour candidatures : indique en objet « Candidature Bachelor Ynov 2026 - Saad Idrissi ».</p>
     </section>
 
     <footer class="site-footer">
       <div class="wrap">
-        <small>© 2025 Saad Idrissi — Portfolio étudiant • Built as static site for GitHub Pages</small>
+        <small>© 2025 Saad Idrissi — Portfolio étudiant</small>
       </div>
     </footer>
   </main>
