fix: Update full CSS + blurry navbar

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; url=/" />
     <title>Redirection…</title>
   </head>
@@ -9,4 +9,3 @@
     <p>Redirection vers la page d'accueil — <a href="/">Retour</a></p>
   </body>
 </html>
-
