Add link to THM profile

--- a/index.html
+++ b/index.html
@@ -20,21 +20,20 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-  <header class="topbar">
-  <div class="container">
-    <!-- LOGO à gauche -->
-    <a class="logo" href="#top">PORTFOLIO</a>
+    <header class="topbar">
+      <div class="container">
+        <!-- LOGO à gauche -->
+        <a class="logo" href="#top">PORTFOLIO</a>
 
-    <!-- NAV à droite -->
-    <nav class="nav" role="navigation" aria-label="Navigation principale">
-      <a href="#about">À propos</a>
-      <a href="#skills">Compétences</a>
-      <a href="#projects">Projets</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </div>
-</header>
-
+        <!-- NAV à droite -->
+        <nav class="nav" role="navigation" aria-label="Navigation principale">
+          <a href="#about">À propos</a>
+          <a href="#skills">Compétences</a>
+          <a href="#projects">Projets</a>
+          <a href="#contact">Contact</a>
+        </nav>
+      </div>
+    </header>
 
     <main>
       <section id="top" class="hero">
@@ -57,6 +56,13 @@
                 href="assets/CV_Saad_Idrissi.pdf"
                 target="_blank"
                 >Voir mon CV</a
+              >
+              <a
+                class="btn outline"
+                href="https://tryhackme.com/p/expyth0n"
+                target="_blank"
+                rel="noopener"
+                >Voir mon profil TryHackMe</a
               >
             </div>
           </div>
@@ -172,9 +178,7 @@
                 virtualisation, sauvegardes et scripts de déploiement.
               </p>
               <p class="project-links">
-                <a class="btn outline" aria-disabled="true"
-                  >Détail (bientôt)</a
-                >
+                <a class="btn outline" aria-disabled="true">Détail (bientôt)</a>
               </p>
             </article>
           </div>
