Update footer style

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               spécialisation luxe digital
             </p>
             <p class="lead">
-              Actuellement en <strong>Bac+2 (Diginamic)</strong>, candidat au
+              Actuellement en <strong>Bac +2 (Diginamic)</strong>, candidat au
               Bachelor Cybersécurité d'Ynov (rentrée 2026). Je construis des
               compétences pratiques en pentest, administration système,
               automatisation et remédiation.
@@ -76,7 +76,7 @@
               <div class="profile-meta">
                 <div class="meta-name">Saad Idrissi</div>
                 <div class="meta-role">
-                  Bac+2 — Technicien Systèmes & Réseaux
+                  Bac +2 — Technicien Systèmes & Réseaux
                 </div>
               </div>
             </div>
@@ -139,9 +139,9 @@
             <article class="project card">
               <h3>Projet Big Square - École 42</h3>
               <p>
-                Projet en C consistant à analyser une carte remplie d'obstacles
-                et à identifier le plus grand carré possible pouvant s’intégrer
-                dans les zones libres de la carte.
+                Pendant mon passage à 42, j’ai développé en C un projet amusant
+                : repérer le plus grand carré libre dans une carte. Explorez le
+                code ici !
               </p>
               <p class="project-links">
                 <a
