Update Top page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Saad Idrissi — Portfolio étudiant</title>
     <meta
       name="description"
-      content="Saad Idrissi — Étudiant en cybersécurité. Parcours, compétences, projets et contact pour candidature Bachelor 3 Ynov 2026."
+      content="Saad Idrissi — Étudiant en cybersécurité. Parcours, compétences, projets et contact."
     />
     <meta name="author" content="Saad Idrissi" />
     <link rel="icon" href="assets/images/favicon.png" />
@@ -40,10 +40,7 @@
         <div class="container hero-grid">
           <div class="hero-content">
             <h1 class="name">Saad <span class="accent">Idrissi</span></h1>
-            <p class="subtitle">
-              Étudiant en cybersécurité • Futur consultant Red Team —
-              spécialisation luxe digital
-            </p>
+            <p class="subtitle">Étudiant en cybersécurité</p>
             <p class="lead">
               Actuellement en <strong>Bac +2 (Diginamic)</strong>, candidat au
               Bachelor Cybersécurité d'Ynov (rentrée 2026). Je construis des
