--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
             <article class="project card">
               <h3>Writeups TryHackMe</h3>
               <p>
-                Documentation méthodique des rooms — démarche, commandes,
-                remédiation. (Hobby & apprentissage)
+                Documentation méthodique des rooms réalisés sur la platforme
+                TryHackMe — démarche, commandes, remédiation. (Hobby &
+                apprentissage)
               </p>
               <p class="project-links">
                 <a
