Update about me section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <h1 class="name">Saad <span class="accent">Idrissi</span></h1>
             <p class="subtitle">Étudiant en cybersécurité</p>
             <p class="lead">
-              Actuellement en <strong>Bac +2 (Diginamic)</strong>, candidat au
-              Bachelor Cybersécurité d'Ynov (rentrée 2026). Je construis des
-              compétences pratiques en pentest, administration système,
-              automatisation et remédiation.
+              Actuellement en <strong>Bac +2 (Diginamic)</strong>, avec un
+              projet d’intégrer un <strong>Bachelor Cybersécurité</strong> à
+              partir de 2026. Je développe des compétences pratiques en pentest,
+              administration système, automatisation et remédiation.
             </p>
             <div class="cta">
               <a
@@ -87,7 +87,8 @@
           <p>
             Je prépare un
             <strong>Bac+2 Technicien Systèmes et Réseaux</strong> (Diginamic) et
-            vise le Bachelor Cybersécurité d'Ynov en 2026.<br />
+            envisage de poursuivre vers un
+            <strong>Bachelor Cybersécurité</strong> en 2026.<br />
             <strong>Mes pratiques :</strong> TryHackMe, CTFs, scripting,
             administration Linux/Windows.<br />
           </p>
@@ -119,7 +120,7 @@
               <ul>
                 <li>Bash, Python</li>
                 <li>Automatisation de tâches & reporting</li>
-                <li>Docker, outils dev</li>
+                <li>Docker, Kubernetes</li>
               </ul>
             </div>
           </div>
@@ -151,7 +152,7 @@
             <article class="project card">
               <h3>Writeups TryHackMe</h3>
               <p>
-                Documentation méthodique des rooms réalisés sur la platforme
+                Documentation méthodique des rooms réalisées sur la plateforme
                 TryHackMe — démarche, commandes, remédiation. (Hobby &
                 apprentissage)
               </p>
